--- a/jouley-song-loader-behavior.html
+++ b/jouley-song-loader-behavior.html
@@ -1,6 +1,6 @@
 <link rel="import" href="../polymer/polymer.html">
 <link rel="import" href="../jouley-error-behavior/jouley-error-behavior.html">
-<link rel="import" href="id3-import.html">
+<script src="../id3js/dist/id3.js"></script>
 
 <script>
 
